add databases envs

--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,8 @@
+POSTGRES_CONTAINER_NAME=migrador_sistec_db
+DATABASE_NAME=migrador_sistec
+DATABASE_USER=migrador
+DATABASE_PASSWORD=migrador
+DATABASE_PORT=5432
+DATABASE_DUMP_DIR=./dump
+
 COOKIE_SISTEC=
